# modern-cpp-template

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: CPM.cmake  Dependencies.cmake
include/myproject/: core.hpp
script/: init_project.py
src/: CMakeLists.txt  core.cpp
test/: CMakeLists.txt  test_core.cpp
